--- a/package.json
+++ b/package.json
@@ -8,20 +8,27 @@
     "start": "next start",
     "lint": "next lint"
   },
-
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-accordion": "^1.2.11",
+    "@tanstack/react-query": "^5.80.10",
+    "@trpc/client": "^11.4.2",
+    "@trpc/server": "^11.4.2",
+    "@trpc/tanstack-react-query": "^11.4.2",
     "class-variance-authority": "^0.7.1",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1"
+    "server-only": "^0.0.1",
+    "superjson": "^2.2.2",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
