--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@inngest/agent-kit": "^0.9.0",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.80.10",
     "@trpc/client": "^11.4.2",
     "@trpc/server": "^11.4.2",
@@ -21,12 +23,14 @@
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
-    "inngest": "^3.39.2",
+    "inngest": "^3.40.1",
     "lucide-react": "^0.536.0",
     "next": "15.3.4",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.7",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.14"
