--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   },
   "dependencies": {
     "@e2b/code-interpreter": "^1.5.1",
+    "@hookform/resolvers": "^5.2.1",
     "@inngest/agent-kit": "^0.9.0",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.80.10",
     "@trpc/client": "^11.4.2",
@@ -23,11 +31,15 @@
     "clsx": "^2.1.1",
     "inngest": "^3.40.1",
     "lucide-react": "^0.536.0",
+    "motion": "^12.23.12",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "random-word-slugs": "^0.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.62.0",
+    "react-resizable-panels": "^3.0.4",
+    "react-textarea-autosize": "^8.5.9",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "superjson": "^2.2.2",
