--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "geist": "^1.4.2",
     "inngest": "^3.40.1",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
