--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rate-limiter-flexible": "^7.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^3.0.4",
     "react-textarea-autosize": "^8.5.9",
